# ledger

./: .env.example  .env.prod.example  .gitignore  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  Dockerfile.prod  conftest.py  pyproject.toml
backend/apps/ap_ar/: admin.py  apps.py  exceptions.py  managers.py  models.py  services.py
backend/apps/ap_ar/migrations/: 0001_initial.py
backend/apps/api/: fields.py  permissions.py  urls.py
backend/apps/api/graphql/: queries.py  (+4 more)
backend/apps/api_tokens/: admin.py  apps.py  authentication.py  middleware.py  models.py  permissions.py
backend/apps/assets/: admin.py  apps.py  managers.py  models.py  services.py
backend/apps/budgets/: admin.py  apps.py  exceptions.py  managers.py  models.py  services.py
backend/apps/currencies/: admin.py  apps.py  exceptions.py  models.py  services.py  tasks.py
backend/apps/entities/: admin.py  apps.py  managers.py  models.py  permissions.py
backend/apps/imports/: admin.py  exceptions.py  managers.py  models.py  services.py
backend/apps/inventory/: admin.py  managers.py  models.py  services.py
backend/apps/ledger/: admin.py  apps.py  constants.py  exceptions.py  managers.py  models.py  services.py
backend/apps/payroll/: admin.py  managers.py  models.py  services.py
backend/apps/recurring/: admin.py  apps.py  exceptions.py  managers.py  models.py  services.py  tasks.py
backend/apps/reports/: services.py
backend/apps/users/: admin.py  managers.py  models.py
backend/config/: celery.py  urls.py
backend/config/settings/: base.py  local.py  prod.py
(+168 files in other folders)
